Redesign the audit gui to show actor heads, clearer filter icons and an active tab highlight