@@ -10,15 +10,18 @@ import com.massivecraft.massivecore.chestgui.type.PagedGui;
 import com.massivecraft.massivecore.collections.MassiveList;
 import com.massivecraft.massivecore.util.MUtil;
 import com.massivecraft.massivecore.util.Txt;
+import org.bukkit.Bukkit;
 import org.bukkit.ChatColor;
 import org.bukkit.Material;
+import org.bukkit.enchantments.Enchantment;
 import org.bukkit.entity.Player;
+import org.bukkit.inventory.ItemFlag;
 import org.bukkit.inventory.ItemStack;
 
-import java.util.Arrays;
 import java.util.EnumSet;
 import java.util.List;
 import java.util.Set;
+import java.util.UUID;
 
 import static com.massivecraft.factions.entity.object.AuditCategory.*;
 
@@ -26,6 +29,7 @@ public class AuditMenu extends PagedGui<AuditEntry>
 {
 	private final Faction faction;
 	private Set<AuditCategory> filter;
+	private String filterLabel = "All";
 
 	public AuditMenu(Player player, Faction faction, boolean adminScope)
 	{
@@ -39,20 +43,41 @@ public class AuditMenu extends PagedGui<AuditEntry>
 		return adminScope ? Txt.parse("<gray>Audit Log <silver>(%s)", scope) : Txt.parse("<gray>%s Log", scope);
 	}
 
+	private record Tab(int slot, Material material, String label, Set<AuditCategory> group) {}
+
+	private List<Tab> tabs()
+	{
+		return MUtil.list(
+			new Tab(1, Material.BOOKSHELF, "All", null),
+			new Tab(2, Material.PLAYER_HEAD, "Members", group(MEMBERSHIP, INVITE, BAN, MUTE)),
+			new Tab(3, Material.GOLDEN_HELMET, "Roles", group(ROLE)),
+			new Tab(4, Material.FILLED_MAP, "Land", group(TERRITORY)),
+			new Tab(5, Material.GOLD_INGOT, "Economy", group(MONEY, CHEST)),
+			new Tab(6, Material.COMPARATOR, "Settings", group(FLAG, PERM, RELATION, HOME, INFO)),
+			new Tab(7, Material.NETHERITE_SWORD, "Admin", group(LIFECYCLE, STRIKE, WARP)));
+	}
+
 	@Override
 	protected void build()
 	{
 		super.build();
 
-		filterTab(1, Material.BOOK, "All", null);
-		filterTab(2, MEMBERSHIP.getIcon(), "Members", group(MEMBERSHIP, INVITE, BAN, MUTE));
-		filterTab(3, ROLE.getIcon(), "Roles", group(ROLE));
-		filterTab(4, TERRITORY.getIcon(), "Land", group(TERRITORY));
-		filterTab(5, MONEY.getIcon(), "Economy", group(MONEY, CHEST));
-		filterTab(6, FLAG.getIcon(), "Settings", group(FLAG, PERM, RELATION, HOME, INFO));
-		filterTab(7, STRIKE.getIcon(), "Admin", group(LIFECYCLE, STRIKE, WARP));
+		button(0, infoIcon(), ctx -> {});
+		for (Tab tab : tabs())
+		{
+			button(tab.slot(), tabIcon(tab), ctx -> selectFilter(tab.group(), tab.label()));
+		}
 
 		button((getRows() - 1) * 9 + 4, new ItemBuilder(Material.BARRIER).name(Txt.parse("<b>Close")), ctx -> ctx.getPlayer().closeInventory());
+	}
+
+	private void selectFilter(Set<AuditCategory> group, String label)
+	{
+		this.filter = group;
+		this.filterLabel = label;
+		this.refreshItems();
+		this.setItem(0, infoIcon());
+		for (Tab tab : tabs()) this.setItem(tab.slot(), tabIcon(tab));
 	}
 
 	@Override
@@ -72,12 +97,15 @@ public class AuditMenu extends PagedGui<AuditEntry>
 	protected ItemStack icon(AuditEntry entry)
 	{
 		AuditCategory cat = entry.getCategory() != null ? entry.getCategory() : LIFECYCLE;
-		return new ItemBuilder(cat.getIcon())
+		return head(entry)
 			.name(AuditFormat.describe(entry, getPlayer()))
 			.withLore(Txt.parse(MUtil.list(
-				"<i>By: " + AuditFormat.actorName(entry, getPlayer()),
-				"<i>When: <h>" + AuditFormat.age(entry) + "<i> ago",
-				"<i>Category: <h>" + cat.getLabel())));
+				"<silver>" + cat.getLabel(),
+				"",
+				"<i>By <h>" + AuditFormat.actorName(entry, getPlayer()),
+				"<i><h>" + AuditFormat.age(entry) + "<i> ago",
+				"",
+				"<n>Click to print in chat")));
 	}
 
 	@Override
@@ -86,18 +114,47 @@ public class AuditMenu extends PagedGui<AuditEntry>
 		player.sendMessage(AuditFormat.describe(entry, player));
 	}
 
-	private void filterTab(int slot, Material material, String name, Set<AuditCategory> group)
+	private ItemStack infoIcon()
 	{
-		ItemStack icon = new ItemBuilder(material)
-			.name(Txt.parse("<k>%s", name))
-			.withLore(Txt.parse(MUtil.list("<n>Click to filter")));
-		button(slot, icon, ctx -> { this.filter = group; this.refreshItems(); });
+		String scope = this.faction == null ? "Server" : ChatColor.stripColor(this.faction.getName());
+		return new ItemBuilder(Material.BOOK)
+			.name(Txt.parse("<k><bold>%s Audit Log", scope))
+			.withLore(Txt.parse(MUtil.list(
+				"<i>Filter: <h>" + this.filterLabel,
+				"<i>Entries: <h>" + this.items().size(),
+				"",
+				"<n>Pick a category to filter",
+				"<n>Click an entry to print it")));
+	}
+
+	private ItemStack tabIcon(Tab tab)
+	{
+		boolean active = this.filterLabel.equals(tab.label());
+		ItemBuilder icon = new ItemBuilder(tab.material())
+			.name(Txt.parse(active ? "<g><bold>%s" : "<k>%s", tab.label()))
+			.withLore(Txt.parse(MUtil.list(active ? "<g>▶ Showing" : "<n>Click to filter")));
+		if (active)
+		{
+			icon.enchantment(Enchantment.UNBREAKING);
+			icon.flag(ItemFlag.HIDE_ENCHANTS);
+		}
+		return icon;
+	}
+
+	private ItemBuilder head(AuditEntry entry)
+	{
+		String actorId = entry.getActorId();
+		if (actorId == null) return new ItemBuilder(Material.COMMAND_BLOCK);
+		ItemBuilder item = new ItemBuilder(Material.PLAYER_HEAD);
+		try { item.owner(Bukkit.getOfflinePlayer(UUID.fromString(actorId))); }
+		catch (RuntimeException ignored) {}
+		return item;
 	}
 
 	private static Set<AuditCategory> group(AuditCategory... cats)
 	{
 		Set<AuditCategory> set = EnumSet.noneOf(AuditCategory.class);
-		set.addAll(Arrays.asList(cats));
+		set.addAll(List.of(cats));
 		return set;
 	}
 }
